# finemo_gpu

./: .gitignore  Dockerfile  LICENSE  README.md  environment.yml  finemo.html  index.html  pyproject.toml  search.js  setup.py
.github/workflows/: docs.yml
docs/: docker.md
finemo/: data_io.html  data_io.py  evaluation.html  evaluation.py  hitcaller.html  hitcaller.py  main.html  main.py  postprocessing.html  templates.html  torch_utils.py  visualization.html  visualization.py
notebooks/: chip_benchmark.ipynb  chip_benchmark_CTCF.ipynb  chip_benchmark_CTCF_nopeak.ipynb  chip_benchmark_GATA.ipynb  chip_benchmark_GATA_nopeak.ipynb  chip_benchmark_SP1.ipynb  chip_benchmark_SP1_nopeak.ipynb  chip_benchmark_YY1.ipynb  chip_benchmark_relaxed.ipynb  chip_benchmark_tight.ipynb  finemo_gpu_notebooks.yaml  hit_sequences.ipynb  modisco_recall.ipynb  qc_visualizations.ipynb
notebooks/K562_PROcap/: hit_cwms.ipynb  hit_sequences.ipynb
notebooks/K562_dnase/: chip_benchmark.ipynb  chip_benchmark_lasso.ipynb  chip_benchmark_relaxed.ipynb  chip_benchmark_tight.ipynb  hit_cwms.ipynb  hit_sequences_background.ipynb  hit_sequences_lasso.ipynb  hit_sequences_relaxed.ipynb  hit_sequences_sparse.ipynb  modisco_recall.ipynb  qc_visualizations.ipynb  xcor_distributions.ipynb
notebooks/Oct4_ChIP/: hit_cwms.ipynb  hit_cwms_long.ipynb  hit_cwms_strict.ipynb  hit_sequences.ipynb  hit_sequences_long.ipynb  hit_sequences_long_strict.ipynb
src/finemo/: __init__.py  __main__.py  data_io.py  evaluation.py  hitcaller.py  main.py  postprocessing.py  visualization.py
src/finemo/templates/: report.html
