[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finemo"
version = "0.14"
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "polars",
    "matplotlib",
    "h5py",
    "hdf5plugin",
    "tqdm",
    "pyBigWig",
    "pyfaidx",
    "jinja2"
]

[project.scripts]
finemo = "finemo.main:cli"
