[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "finemo"
description = "Identification of regulatory elements from neural network contribution scores for DNA."
keywords = ["deep learning", "genomics"]
version = "0.40"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Austin Wang", email = "austin.wang1357@gmail.com"},
    {name = "Anshul Kundaje", email = "akundaje@stanford.edu"}
]
dependencies = [
    "numpy",
    "scipy",
    "torch",
    "numba",
    "polars>=1.0",
    "matplotlib",
    "h5py",
    "hdf5plugin",
    "tqdm",
    "pyBigWig",
    "pyfaidx",
    "jinja2",
    "jaxtyping"
]

[project.scripts]
finemo = "finemo.main:cli"

[project.urls]
Homepage = "https://github.com/austintwang/finemo_gpu"
Repository = "https://github.com/austintwang/finemo_gpu.git"

[tool.ruff]
ignore = ["F722"]